style.css
@import url('https://fonts.googleapis.com/css2?family=Macondo&family=Modern+Antiqua&display=swap');

wa-page {
    --menu-width: 15rem;
    /* --aside-width: 15rem; */
}

wa-page[view='mobile'] {
    --menu-width: auto;
    --aside-width: auto;
}

/* Utilities */
wa-page[view='mobile'] .wa-desktop-only,
wa-page[view='desktop'] .wa-mobile-only {
  display: none !important;
}
  

[slot='header'] {
    --wa-link-decoration-default: none;
    border-block-end: var(--wa-border-width-s) var(--wa-border-style) var(--wa-color-surface-border);
}
[slot*='header'] a {
    font-weight: var(--wa-font-weight-action);
}

[slot='navigation-header'] {
    border-block-end: var(--wa-border-width-s) var(--wa-border-style) var(--wa-color-surface-border);
    padding: 0 0 0 1rem;
}

[slot*='navigation'] a {
    --wa-color-text-link: var(--wa-color-text-normal);
    padding: 0;
}

[slot*='aside'] a, #port-info a {
    color: var(--wa-color-text-normal);
}

main {
    padding: 0;
    margin: 0;
    height: calc(100vh - var(--header-height));
}

html,
body {
    min-height: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
    color: var(--wa-color-text-normal);
}

:not(:defined) {
    visibility: hidden;
}
 
#port-info * {
    color: var(--wa-color-text-normal);
}

#map {
    height: 100%;
    /* flex-grow: 1; */
}

.maplibregl-popup {
    opacity: 0.87;
}

.maplibregl-popup-content {
    pointer-events: none;
    padding: 0.5rem;
    background-color: var(--wa-color-surface-raised);
    color: var(--wa-color-text-normal);
    font-family: var(--wa-font-family-body);
    max-height: 150px;
    overflow: scroll;
    /* border: 1px solid #200005; */
    border-radius: 5px;
    /* box-shadow: 1px 1px 2px #200005; */
}

.maplibregl-popup-content h4 {
    margin: 0;
    pointer-events: none;
}

.maplibregl-popup-content p {
    margin: 0;
    padding-bottom: 0.2rem;
    pointer-events: none;
}

.maplibregl-popup .popup {
    pointer-events: all;
}

.maplibregl-popup-content button {
    pointer-events: all;
}

.maplibregl-popup-tip {
    z-index: 0;
}

.maplibregl-popup-anchor-left .maplibregl-popup-tip {
    border-right-color: #f7ead3;
}
.maplibregl-popup-anchor-bottom .maplibregl-popup-tip {
    border-top-color: #f7ead3;
}
.maplibregl-popup-anchor-top .maplibregl-popup-tip {
    border-bottom-color: #f7ead3;
}
.maplibregl-popup-anchor-right .maplibregl-popup-tip {
    border-left-color: #f7ead3;
}

.maplibregl-popup-close-button {
    font-size: 1rem;
}

.maplibregl-ctrl-zoom-in, .maplibregl-ctrl-zoom-out {
    height: 36px;
    width: 36px;
}

.port-info {
    padding: 10px;
}

/* filter-sidebar.css */
#year-filter {
    margin: 16px;
}

.noUiSlider {
    margin: 15px 0;
}

.year-label {
    font-weight: bold;
    margin-bottom: 10px;
    display: block;
}

.noUi-connect {
    background-color: #5a291f;
}

.noUi-pips {
    color: #000;
}

.noUi-value-horizontal {
    padding-top: 6px;
}

wa-details.custom-icons::part(icon) {
    rotate: none;
}

wa-details {
    --spacing: 0;
    border: none;
}

